# setups

./: .env  .gitignore  Cargo.toml  README.md
.defract/: README.md  config.yaml  project.md
.defract/backlog/: bli-add-a-github-15.md  bli-add-open-in-13.md  bli-advanced-charting-with-7.md  bli-ai-powered-news-2.md  bli-anomaly-detection-5.md  bli-backtesting-against-historical-8.md  bli-conversational-ai-analyst-3.md  bli-create-homebrew-tap-16.md  bli-order-flow-and-9.md  bli-redesign-the-ratatui-11.md  bli-render-clickable-osc-14.md  bli-scenario-modeling-what-6.md  bli-sector-by-sector-1.md  bli-sentiment-and-narrative-4.md  bli-surface-the-news-12.md  bli-thread-finnhub-news-10.md
.defract/design-system/: design-system.md  design-tokens.json  status.json
.defract/memory/: builder-preferences.md  decisions.md  entries.jsonl  mistakes.md  project-facts.md  project.json  workflows.md
.defract/project-profile/: status.json
.defract/tasks/task-debugging-brew-install-setups-failure-01kvqz1rzz42/: state.json  task.md
.defract/tasks/task-tui-redesign-hyperlinks-and-homebrew-01kvqxj777gd/: state.json  task.md
.defract/tasks/task-would-like-to-add-entry-and-exit-01kvqsdz9c20/: state.json  task.md
.github/workflows/: release.yml
Formula/: setups.rb
src/: main.rs
src/analysis/: indicators.rs  mod.rs  scoring.rs  screener.rs
src/data/: benzinga.rs  finnhub.rs  mod.rs  ortex.rs  polygon.rs  unusual_whales.rs
src/models/: mod.rs  setup.rs  ticker.rs
src/ui/: dashboard.rs
