[package]
name = "setups"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "setups"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
futures-util = "0.3"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
tokio-stream = "0.1"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
